--- a/Project02/Resource/Main.storyboard
+++ b/Project02/Resource/Main.storyboard
@@ -1,51 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Mut-8m-0cY">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2ii-MX-K62">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="QsM-xc-BeR">
-            <objects>
-                <viewController id="Mut-8m-0cY" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ewZ-ge-GmK">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="DME-bo-VlH"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYO-w0-i4L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="77" y="28"/>
-        </scene>
         <!--Login View Controller-->
         <scene sceneID="OXN-3v-c1y">
             <objects>
-                <viewController id="2ii-MX-K62" customClass="LoginViewController" customModule="Project02" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="2ii-MX-K62" customClass="LoginViewController" customModule="Project02" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wv2-JA-EHH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QhH-yV-MJ4">
-                                <rect key="frame" x="184" y="525" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QhH-yV-MJ4">
+                                <rect key="frame" x="184" y="138" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="MSe-5K-jBB"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="loginBtnAction:" destination="2ii-MX-K62" eventType="touchUpInside" id="DZX-Nv-zzA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="QhH-yV-MJ4" firstAttribute="top" secondItem="wCM-WH-4lh" secondAttribute="top" constant="50" id="N26-uW-vo6"/>
+                            <constraint firstItem="QhH-yV-MJ4" firstAttribute="leading" secondItem="wCM-WH-4lh" secondAttribute="leading" constant="184" id="NNe-uz-Ayl"/>
+                            <constraint firstItem="wCM-WH-4lh" firstAttribute="trailing" secondItem="QhH-yV-MJ4" secondAttribute="trailing" constant="184" id="PXJ-wO-hLm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="wCM-WH-4lh"/>
                     </view>
+                    <navigationItem key="navigationItem" id="7BA-yc-Q4U"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oPJ-Wb-oCt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="799" y="27"/>
+            <point key="canvasLocation" x="1708.6956521739132" y="26.785714285714285"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="5nt-GX-VRI">
+            <objects>
+                <viewController storyboardIdentifier="MainViewController" id="vvQ-iM-4bj" customClass="MainViewController" customModule="Project02" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cCe-9u-e27">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="elC-yU-2sJ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fnB-AO-OTf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2545" y="25"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="i9B-W2-bLf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dGr-q7-wBZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cbw-6f-PNJ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2ii-MX-K62" kind="relationship" relationship="rootViewController" id="DhI-Lv-ZQ7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nbB-sL-5G5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="798.55072463768124" y="26.785714285714285"/>
         </scene>
     </scenes>
 </document>
